# chrp

./: README.md  api.c  args.c  cas.c  chemspider.c  curl_boilerplate.c  meson.build  meson.options  psychonautwiki.c  pubchem.c  search.c  sixel_boilerplate.c  term.c  tmux_web_chrp.sh  wikimedia.c  xml_boilerplate.c
include/: api.h  args.h  curl_boilerplate.h  data.h  flush.h  search.h  sixel_boilerplate.h  term.h  xml_boilerplate.h
web/: index.html  main.js  style.css
